syntax = "proto3";

option go_package = "./pb";

message Product{
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
}

message PostProductRequest{
    string name = 1;
    string description = 2;
    double price = 3;
}

message PostProductResponse{
    Product product = 1;
}

message GetProductRequest{
    string id = 1;
}

message GetProductResponse{
    Product product = 1;
}

message GetProductsRequest{
    string query = 1;
    uint64 skip = 2;
    uint64 take = 3;
    repeated string ids = 4;
}

message GetProductsResponse{
    repeated Product products = 1;
}

service CatalogService{
    rpc PostProduct(PostProductRequest) returns (PostProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
}